--- a/EventEase/Views/Bookings/Create.cshtml
+++ b/EventEase/Views/Bookings/Create.cshtml
@@ -19,12 +19,12 @@
                 <span asp-validation-for="BookingDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EventId" class="control-label"></label>
-                <select asp-for="EventId" class ="form-control" asp-items="ViewBag.EventId"></select>
+                <label asp-for="Event.EventName" class="control-label"></label>
+                <select asp-for="EventId" class ="form-control" asp-items="ViewBag.EventName"></select>
             </div>
             <div class="form-group">
-                <label asp-for="VenueId" class="control-label"></label>
-                <select asp-for="VenueId" class ="form-control" asp-items="ViewBag.VenueId"></select>
+                <label asp-for="Venue.VenueName" class="control-label"></label>
+                <select asp-for="VenueId" class ="form-control" asp-items="ViewBag.VenueName"></select>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
