--- a/EventEase/Views/Bookings/Edit.cshtml
+++ b/EventEase/Views/Bookings/Edit.cshtml
@@ -20,13 +20,13 @@
                 <span asp-validation-for="BookingDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="EventId" class="control-label"></label>
-                <select asp-for="EventId" class="form-control" asp-items="ViewBag.EventId"></select>
+                <label asp-for="Event.EventName" class="control-label"></label>
+                <select asp-for="EventId" class="form-control" asp-items="ViewBag.EventName"></select>
                 <span asp-validation-for="EventId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="VenueId" class="control-label"></label>
-                <select asp-for="VenueId" class="form-control" asp-items="ViewBag.VenueId"></select>
+                <label asp-for="Venue.VenueName" class="control-label"></label>
+                <select asp-for="VenueId" class="form-control" asp-items="ViewBag.VenueName"></select>
                 <span asp-validation-for="VenueId" class="text-danger"></span>
             </div>
             <div class="form-group">
